[package]
name = "xxx"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
jupiter-swap-api-client = "0.1.0"
solana-sdk = "1.18.7"
solana-client = "1.18.7"
bincode = "1.3.3"
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.12.1", features = ["json"] }
spl-associated-token-account = "2.3.0"